custom routes - 2 ways

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,10 @@
-<h1>Homepage of Pages</h1>
+<h1>Welcome Home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
+<h2>Pages</h2>
 <%= @posts.inspect %>
 <br><br><br>
+<h2>Skills</h2>
 <%= @skills.inspect %>
+<h2>Portfolios</h2>
+<%= @portfolios.inspect %>
