--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,5 +1,6 @@
 <h1> Edit </h1>
 <!--  form_with(model: portfolio, local: true) do |form|
+with if its the actual form
 --> 
 <%= form_for(@portfolio) do |form| %>
 
