--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
 <h1>Blog Posts</h1>
 
@@ -18,6 +18,7 @@
         <td><%= blog.title %></td>
         <td><%= blog.body %></td>
         <td><%= blog.score %></td>
+        <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
 
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
@@ -26,7 +27,7 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
-
 <%= link_to 'New Blog Post', new_blog_path %>
+<br>
+<p id="notice"><%= notice %></p>
