--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -15,5 +15,10 @@
   <%= @blog.score %>
 </p>
 
+<p>
+  <strong>Status:</strong>
+  <%= @blog.status %>
+</p>
+
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
 <%= link_to 'Back', blogs_path %>
